[Success] Styling fix for header nav on mobile

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -7,7 +7,7 @@
   margin: 8px 0;
 }
 .header {
-  width: 95%;
+  width: 100%;
   display: flex;
   justify-content: center;
   min-height: 100px;
